fixed whitespace and some code refactoring to remove repeated code

--- a/styles.css
+++ b/styles.css
@@ -69,9 +69,7 @@ header h1 {
 }
 
 header h2 {
-	font-size: 1.25rem;
 	color: #FFFFFF;
-	text-transform: uppercase;
 	text-align: right;
 	padding-right: 50px;
 }
@@ -95,7 +93,6 @@ main {
 
 main section {
 	padding-top: 50px;
-	overflow: auto;
 }
 
 h2 {
@@ -104,16 +101,17 @@ h2 {
 	text-transform: uppercase;
 }
 
+.containerLarge, .containerSmall {
+	padding: 10px;
+	float: left;
+}
+
 .containerLarge {
 	width: 50%;
-	padding: 10px 10px;
-	float: left;
 }
 
 .containerSmall {
 	width: 25%;
-	padding: 10px 10px;
-	float: left;
 }
 
 .containerLarge a, .containerSmall a {
@@ -217,7 +215,6 @@ footer {
 
 .contactRight img {
 	width: 32px;
-	height: 32px;
 }
 
 @media screen and (max-width: 925px) {
@@ -262,12 +259,10 @@ footer {
 	
 	.containerLarge {
 		width: 100%;
-		padding: 10px 10px;
 	}
 	
 	.containerSmall {
 		width: 50%;
-		padding: 10px 10px;
 	}
 	
 	img.photo {
@@ -295,6 +290,7 @@ footer {
 	nav li {
 		padding: 10px 3px;
 	}
+	
 	.navContainerLogo {
 		display: none;
 	}
@@ -315,16 +311,11 @@ footer {
 		padding-top: 35px;
 	}
 	
-	.containerLarge {
+	.containerLarge, .containerSmall {
 		width: 100%;
 		padding: 10px 5px;
 	}
-	
-	.containerSmall {
-		width: 100%;
-		padding: 10px 5px;
-	}
-	
+
 	.containerLarge .projectBox, .containerSmall .projectBox {
 		min-height: 150px;
 	}
